Modificación para enviar correos de recuperación de credenciales solo con la cedula al correo personal registrado

--- a/SIGIT/Views/Empleados/Edit.cshtml
+++ b/SIGIT/Views/Empleados/Edit.cshtml
@@ -134,8 +134,8 @@
 
             <br />
             <div class="form-group">
-                <button type="submit" class="btn btn-outline-success">Guardar Cambios</button>
-                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancelar</button>
+                <button type="submit" class="btn btn-outline-success"><i class="bi bi-save2"></i> Guardar</button>
+                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal"><i class="bi bi-door-open-fill"></i> Cancelar</button>
             </div>
         </form>
     </div>
