--- a/SIGIT/Views/Empleados/Listado.cshtml
+++ b/SIGIT/Views/Empleados/Listado.cshtml
@@ -9,7 +9,7 @@
 @if (User.IsInRole("Administrador") || User.IsInRole ("Técnico")){
 
 <p>
-    <a class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Create", "Empleados")" data-title="Nuevo Usuario">Nuevo usuario</a>
+        <a class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Create", "Empleados")" data-title="Nuevo Usuario"><i class="bi bi-person-add"></i></a>
 
 </p>
 }
@@ -34,7 +34,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Estatus)
             </th>
-            <th></th>
+            <th>Acciones</th>
         </tr>
     </thead>
     <tbody>
@@ -62,16 +62,14 @@
                 <td>
                     
                     <a class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Edit", "Empleados", new { id = item.Id })" data-title="Editar Empleado">
-                        <i class="bi bi-pencil-square"></i>Editar
-                    </a>
+                        <i class="bi bi-pencil-square"></i></a>
 
                     <a class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Details", "Empleados", new { id = item.Id })" data-title="Detalles del empleado">
-                        <i class="bi bi-ui-checks"></i>Detalles</a>
+                        <i class="bi bi-ui-checks"></i></a>
 
                     @if (User.IsInRole("Administrador"))
                     {
-                        <span>|</span>
-                        <a class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Delete", "Empleados", new { id = item.Id })" data-title="Eliminar Empleado">Eliminar</a>
+                        <a class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Delete", "Empleados", new { id = item.Id })" data-title="Eliminar Empleado"><i class="bi bi-x-square-fill"></i></a>
                     }
                     @* <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a> *@
                 </td>
