--- a/SIGIT/Views/UsuariosSistemas/Details.cshtml
+++ b/SIGIT/Views/UsuariosSistemas/Details.cshtml
@@ -62,5 +62,5 @@
     </div>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cerrar</button>
+    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal"><i class="bi bi-door-open-fill"></i> Cerrar</button>
 </div>
