--- a/SIGIT/Views/Areas/Edit.cshtml
+++ b/SIGIT/Views/Areas/Edit.cshtml
@@ -4,13 +4,8 @@
     Layout = null; // ¡Importante! No usar el _Layout principal
 }
 
-@* @{
-    ViewData["Title"] = "Edit";
-} *@
-
-
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="AreaId" />
@@ -21,13 +16,13 @@
             </div>
             <br />
             <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-outline-primary" /> | 
-                <a class="btn btn-outline-secondary" asp-action="Index">Volver</a>
+                <button type="submit" class="btn btn-outline-success"><i class="bi bi-floppy-fill"></i></button>
+                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal"><i class="bi bi-house-x-fill"></i></button>
             </div>
         </form>
     </div>
 </div>
 
-@section Scripts {
+@* @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+} *@
