--- a/SIGIT/Views/Empleados/Listado.cshtml
+++ b/SIGIT/Views/Empleados/Listado.cshtml
@@ -9,11 +9,11 @@
 @if (User.IsInRole("Administrador") || User.IsInRole ("Técnico")){
 
 <p>
-        <a class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Create", "Empleados")" data-title="Nuevo Usuario"><i class="bi bi-person-add"></i></a>
+        <a class="btn btn-outline-success btn-lg" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Create", "Empleados")" data-title="Nuevo Usuario"><i class="bi bi-person-fill-add"></i></a>
 
 </p>
 }
-<table class="table">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>
@@ -61,17 +61,17 @@
                 </td>
                 <td>
                     
-                    <a class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Edit", "Empleados", new { id = item.Id })" data-title="Editar Empleado">
+                    <a class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Edit", "Empleados", new { id = item.Id })" data-title="Editar Empleado">
                         <i class="bi bi-pencil-square"></i></a>
 
-                    <a class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Details", "Empleados", new { id = item.Id })" data-title="Detalles del empleado">
+                    <a class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Details", "Empleados", new { id = item.Id })" data-title="Detalles del empleado">
                         <i class="bi bi-ui-checks"></i></a>
 
                     @if (User.IsInRole("Administrador"))
                     {
                         <a class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Delete", "Empleados", new { id = item.Id })" data-title="Eliminar Empleado"><i class="bi bi-x-square-fill"></i></a>
                     }
-                    @* <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a> *@
+                    
                 </td>
             </tr>
         }
