--- a/SIGIT/Views/Estatus/Index.cshtml
+++ b/SIGIT/Views/Estatus/Index.cshtml
@@ -7,9 +7,9 @@
 <h1>Estados</h1>
 
 <p>
-    <a class="btn btn-outline-success" asp-action="Create" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Create")" data-title="Agregar Estatus">Nuevo Estado</a>
+    <a class="btn btn-outline-success btn-lg" asp-action="Create" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Create")" data-title="Agregar Estatus">Nuevo Estado</a>
 </p>
-<table class="table">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>
