--- a/SIGIT/Views/Home/Index.cshtml
+++ b/SIGIT/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
     <hr />
     <div class="row">
         <div class="col-md-6 mx-auto">
-            <div class="card">
+            <div class="card bg-dark bg-opacity-75">
                 <div class="card-body">
                     <div class="row d-flex justify-content-center">
                         <div class="col-md-8">
@@ -60,10 +60,9 @@
                                 Eres de los nuestros pero... ¿no recuerdas tus usuarios y contraseñas? <i class="bi bi-person-vcard"></i>
                             </span>
                         </button>
-
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionUsuarios">
-                        <div class="accordion-body">
+                        <div class="accordion-body bg-info bg-opacity-25">
                             <p><i class="bi bi-arrow-down-right-circle"></i> Haz clic aquí y recupera tus datos de las aplicaciones <i class="bi bi-arrow-down-left-circle"></i></p>
                             <div class="d-grid gap-2 col-6 mx-auto">
                                 
