--- a/SIGIT/Views/Aplicaciones/Delete.cshtml
+++ b/SIGIT/Views/Aplicaciones/Delete.cshtml
@@ -1,26 +1,32 @@
 ﻿@model SIGIT.Models.Aplicacione
 
 @{
-    ViewData["Title"] = "Delete";
+    Layout = null; // Necesario para vista parcial
 }
 
-<h1>Eliminar Aplicación</h1>
-
-<h3 class="text-danger">¿Esta seguro que quiere eliminar este registro?</h3>
-<div>
-    <hr />
+<div class="modal-body">
+    <h3 class="text-danger">¿Esta seguro que quiere eliminar este registro?</h3>
+    <br />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.NombreAplicacion)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.NombreAplicacion)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="AplicacionId" />
-        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
-        <a class="btn btn-outline-secondary" asp-action="Index">Volver</a>
+
+    <!-- Token Anti-Falsificación para el POST -->
+    @Html.AntiForgeryToken()
+    <input type="hidden" asp-for="AplicacionId" />
+</div>
+
+<div class="modal-footer">
+
+    <form asp-action="DeleteConfirmed" asp-route-id="@Model.AplicacionId" method="post">
+        @Html.AntiForgeryToken()
+
+        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal"><i class="bi bi-house-x-fill"></i></button>
+        <button type="submit" class="btn btn-danger"><i class="bi bi-trash3-fill"></i></button>
     </form>
 </div>
