--- a/SIGIT/Views/Aplicaciones/Details.cshtml
+++ b/SIGIT/Views/Aplicaciones/Details.cshtml
@@ -1,24 +1,21 @@
 ﻿@model SIGIT.Models.Aplicacione
 
 @{
-    ViewData["Title"] = "Details";
+    Layout = null;
 }
 
-<h1>Detalles</h1>
-
-<div>
-    <h4>Aplicacione</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NombreAplicacion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NombreAplicacion)
-        </dd>
-    </dl>
+<div class="modal-body">
+    <div>
+        <dl class="row">
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.NombreAplicacion)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.NombreAplicacion)
+            </dd>
+        </dl>
+    </div>
 </div>
-<div>
-    <a class="btn btn-outline-warning" asp-action="Edit" asp-route-id="@Model?.AplicacionId">Editar</a> |
-    <a class="btn btn-outline-secondary" asp-action="Index">Volver</a>
+<div class="modal-footer">
+    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal"><i class="bi bi-house-x-fill"></i></button>
 </div>
