--- a/SIGIT/Views/Areas/Create.cshtml
+++ b/SIGIT/Views/Areas/Create.cshtml
@@ -4,10 +4,8 @@
     Layout = null; // ¡Importante! No usar el _Layout principal
 }
 
-<h1>Crear área</h1>
-
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -17,15 +15,16 @@
             </div>
             <br />
             <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-primary" /> |
-                <a class="btn btn-outline-secondary" asp-action="Index">Volver</a>
+                <button type="submit" class="btn btn-outline-success"><i class="bi bi-floppy-fill"></i></button>
+                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal"><i class="bi bi-house-x-fill"></i></button>
             </div>
         </form>
     </div>
 </div>
 
-@section Scripts {
+@* @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
+ *@
