--- a/SIGIT/Views/Areas/Delete.cshtml
+++ b/SIGIT/Views/Areas/Delete.cshtml
@@ -1,26 +1,41 @@
 ﻿@model SIGIT.Models.Area
 
 @{
-    ViewData["Title"] = "Delete";
+    Layout = null; // Necesario para vista parcial
 }
 
-<h1>Eliminar Área</h1>
-
-<h3 class="text-danger">¿Esta seguro de querer eliminar está área?</h3>
-<hr />
-<div>
+<div class="modal-body">
+    <h3 class="text-danger">¿Está seguro que quiere eliminar esta área?</h3>
+    <hr />
     <dl class="row">
-        <dt class="col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.NombreArea)
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.NombreArea)
         </dd>
     </dl>
+</div>
 
-    <form asp-action="Delete">
+<div class="modal-footer">
+
+    <!-- Botón Cancelar (Asegura que no haga submit al formulario) -->
+    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
+        <i class="bi bi-x-square"></i> Cancelar
+    </button>
+
+    <!-- El formulario solo para la acción de borrado -->
+    <form asp-action="DeleteConfirmed" asp-route-id="@Model.AreaId" method="post">
+
+        <!-- Anti-Forgery Token (ESENCIAL) -->
+        @Html.AntiForgeryToken()
+
+        <!-- Input del ID del área -->
         <input type="hidden" asp-for="AreaId" />
-        <input type="submit" value="Eliminar" class="btn btn-outline-danger" /> |
-        <a class="btn btn-outline-secondary" asp-action="Index">Volver</a>
+
+        <!-- Botón de Submit (Confirmar) -->
+        <button type="submit" class="btn btn-danger">
+            <i class="bi bi-trash3-fill"></i> Confirmar Eliminación
+        </button>
     </form>
 </div>
