--- a/SIGIT/Views/Areas/Details.cshtml
+++ b/SIGIT/Views/Areas/Details.cshtml
@@ -7,19 +7,17 @@
 <div class="modal-body">
     <div>
         <dl class="row">
-            <dt class="col-sm-2">
+            <dt class="col-sm-4">
                 @Html.DisplayNameFor(model => model.NombreArea)
             </dt>
-            <dd class="col-sm-10">
+            <dd class="col-sm-8">
                 @Html.DisplayFor(model => model.NombreArea)
             </dd>
         </dl>
     </div>
 </div>
 <div>
-    <a class="btn btn-outline-secondary" asp-action="Index">Volver</a>
-    @*<a class="btn btn-outline-warning" asp-action="Edit" asp-route-id="@Model?.AreaId">Editar</a> |
-<a class="btn btn-outline-secondary" asp-action="Index">Volver</a>*@
+    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal"><i class="bi bi-house-x-fill"></i></button>
 </div>
 
 @* section Scripts {
