--- a/SIGIT/Views/UsuariosSistemas/Index.cshtml
+++ b/SIGIT/Views/UsuariosSistemas/Index.cshtml
@@ -7,9 +7,9 @@
 <h1>Usuarios del sistema</h1>
 
 <p>
-    <a class="btn btn-outline-success" asp-action="Create" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Create")" data-title="Crear Usuario">Crear Usuario</a>
+    <a class="btn btn-outline-success btn-lg" asp-action="Create" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Create")" data-title="Crear Usuario">Crear Usuario</a>
 </p>
-<table class="table">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>
@@ -65,8 +65,8 @@
                     @Html.DisplayFor(modelItem => item.Activo)
                 </td>
                 <td>
-                    <a class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Edit", new { id = item.UsuarioSistemaId })" data-title="Editar Usuario"><i class="bi bi-pencil-square"></i></a>
-                    <a class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Details", new { id = item.UsuarioSistemaId })" data-title="Detalles Usuario"><i class="bi bi-ui-checks"></i></a>
+                    <a class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Edit", new { id = item.UsuarioSistemaId })" data-title="Editar Usuario"><i class="bi bi-pencil-square"></i></a>
+                    <a class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Details", new { id = item.UsuarioSistemaId })" data-title="Detalles Usuario"><i class="bi bi-ui-checks"></i></a>
                     <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.UsuarioSistemaId"><i class="bi bi-x-square-fill"></i></a>
                 </td>
             </tr>
